---
source: melior/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: f64, %arg1: f64) -> i1 {
    %0 = arith.cmpf oeq, %arg0, %arg1 : f64
    return %0 : i1
  }
}

